# satysfi-latexcmds

./: .gitignore  CHANGELOG.md  README.md  Satyristes  satysfi-latexcmds-doc.opam  satysfi-latexcmds.opam
doc/: latexcmds-doc.saty
src/: latexcmds.satyh
