opam-version: "2.0"
name: "satysfi-latexcmds-doc"
version: "0.1.0"
synopsis: "LaTeX-like commands in SATySFi"
description: """LaTeX-like commands in SATySFi"""

maintainer: "Yasuo Ozu <yasuo@ozu.email>"
authors: "Yasuo Ozu <yasuo@ozu.email>"
license: "LGPL-3.0-or-later"
homepage: "https://github.com/yasuo-ozu/satysfi-latexcmds"
bug-reports: "https://github.com/yasuo-ozu/satysfi-latexcmds/issues"
dev-repo: "git+https://github.com/yasuo-ozu/satysfi-latexcmds.git"

depends: [
  "satysfi" {>= "0.0.5" & < "0.0.7"}
  "satysfi-dist"
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "latexcmds-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "latexcmds-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]

