opam-version: "2.0"
name: "satysfi-latexcmds"
version: "0.1.0"
synopsis: "LaTeX-like commands in SATySFi"
description: """LaTeX-like commands in SATySFi"""

maintainer: "Yasuo Ozu <yasuo@ozu.email>"
authors: "Yasuo Ozu <yasuo@ozu.email>"
license: "LGPL"
homepage: "https://github.com/yasuo-ozu/satysfi-latexcmds"
bug-reports: "https://github.com/yasuo-ozu/satysfi-latexcmds/issues"
dev-repo: "git+https://github.com/yasuo-ozu/satysfi-latexcmds.git"

depends: [
  "satysfi" {>= "0.0.5" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "latexcmds"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
